src/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');

:root {
  --dark-bg: #343a40;
}

body {
  font-family: 'Montserrat', sans-serif;
  margin: 0;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  color: #ffffff;
  min-height: 100vh;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;
}

/*****Header*****/
#header {
  display: flex;
  justify-content: flex-end;
  margin: 1rem 1rem 0;
}

#search {
  font-family: 'Montserrat', sans-serif;
  border: none;
  border-radius: 5px 0 0 5px;
  padding: 13px;
  background-color: rgba(255, 255, 255, 0.5);
  flex: 0.95;
  color: #ffffff;
  font-weight: bold;
  margin: 0;
}

#search::placeholder {
  color: #ffffff;
}

#search:focus {
  outline: none;
}

.search-container {
  display: flex;
  max-width: 350px;
  min-width: 350px;
}

.search-button {
  border: none;
  cursor: pointer;
  color: var(--dark-bg);
  background-color: #ffffff;
  border-radius: 0 5px 5px 0;
  font-size: 20px;
  padding: 0 13px;
  flex: 0.05;
  margin: 0;
}

.temperature-converter {
  display: flex;
  margin-right: 1rem;
  border-radius: 5px;
  border: solid 2px #ffffff;
}

.farenheit-active {
  background-image: -webkit-linear-gradient(
    180deg,
    var(--dark-bg) 50%,
    transparent 50%
  );
}

.celsius-active {
  background-image: -webkit-linear-gradient(
    180deg,
    transparent 50%,
    var(--dark-bg) 50%
  );
}

.farenheit,
.celsius {
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
  font-size: 1rem;
  padding: 0.6rem 1.2rem;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

input[type='search']::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

input[type='search']::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

input[type='search']::-webkit-search-decoration,
input[type='search']::-webkit-search-cancel-button,
input[type='search']::-webkit-search-results-button,
input[type='search']::-webkit-search-results-decoration {
  display: none;
  -webkit-appearance: none;
}

input[type='search'],
button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

/*****Main Section*****/
#weather-data {
  margin: 4rem 5% 2rem;
}

.weather-data-top {
  display: flex;
}

.weather-data-bottom {
  display: flex;
}

.weather-desc {
  font-size: 1.2rem;
  margin: 0 0 -0.2rem 0;
  padding: 0 0 0 0.1rem;
}

.unit {
  font-size: 1.5rem;
  font-weight: bold;
  vertical-align: 300%;
}

.location {
  font-size: 3.5rem;
  margin: 0;
}

.temperature {
  font-size: 8rem;
  font-weight: bold;
  margin: 0;
}

.feels-like-container {
  display: flex;
}

.feels-like {
  margin: 0.4375rem 0;
  font-weight: bold;
}

.feels-like-unit {
  font-size: 0.65rem;
  font-weight: bold;
  margin: 0.3125rem 0 0 0;
}

.condition-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 1.875rem 1.25rem 0 1.25rem;
  padding: 0 0 0 1.875rem;
  border-left: solid 3px #ffffff;
  height: 5.625rem;
}

.condition-info > p {
  margin: 0.4375rem 0;
  font-weight: bold;
}

.time {
  font-size: 1.2rem;
  padding: 0 0 0 0.2rem;
  margin: -0.2rem 0 0 0;
}

.icon-container {
  margin: -0.3125rem 0 0 0;
  padding: 5px 0 0 0;
}

/*****Forecast Section*****/
#forecast {
  margin: 0 5% 1rem;
}

.weather-icon {
  color: #ffffff;
  width: 100%;
  height: auto;
}

.forecast-button {
  margin-right: 2rem;
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
  font-size: 1rem;
  padding: 0.6rem 1.2rem;
  border: none;
  cursor: pointer;
  background-color: transparent;
  color: #ffffff;
  max-width: 98px;
  min-width: 98px;
}

.selected-button {
  border: 2px solid #f5f5f5;
  border-radius: 3px;
}

.weather-forecast {
  display: flex;
  justify-content: space-between;
  margin-top: 1.2rem;
}

.weather-forecast > div {
  background-color: transparent;
  text-align: center;
  box-sizing: border-box;
}

.forecast-container {
  display: flex;
}

.forecast > h3 {
  font-size: 1.3rem;
  margin: 0;
}

.forecast > p {
  margin: 0;
  font-weight: bold;
  font-size: 1.3rem;
}

.daily-forecast,
.hourly-forecast {
  display: flex;
  justify-content: space-between;
  margin: 3% 0 0 0;
}

.daily-forecast > div,
.hourly-forecast > div {
  background-color: transparent;
  text-align: center;
  box-sizing: border-box;
}

.circle {
  height: 5px;
  width: 5px;
  border-radius: 50%;
  border: 1px solid #ffffff;
  margin: 0.0625rem 0.25rem 0 0.25rem;
  cursor: pointer;
}

.circle-active {
  background-color: #ffffff;
}

.arrow {
  margin: 0 0.25rem;
  font-size: 20px;
  cursor: pointer;
}

.forecast-arrows {
  display: flex;
  align-items: center;
}

/*****Media Query Breakpoints*****/

@media (max-width: 768px) {
  :root {
    font-size: 12px;
  }

  #header {
    justify-content: center;
  }

  #weather-data {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 5% 0;
  }

  .weather-data-top {
    text-align: center;
    flex-direction: column-reverse;
  }

  .icon-container {
    width: 100%;
    margin-bottom: -1.5rem;
  }

  .icon-container .weather-icon {
    width: 6.25rem;
  }
}

@media (max-width: 480px) {
  #weather-data {
    margin: 10% 5%;
  }

  .search-container {
    max-width: 300px;
    min-width: 300px;
  }

  .celsius,
  .farenheit {
    padding: 0.3rem 1.2rem;
  }

  .temperature-converter {
    flex-direction: column;
  }

  .farenheit-active {
    background-image: -webkit-linear-gradient(
      90deg,
      var(--dark-bg) 50%,
      transparent 50%
    );
  }

  .celsius-active {
    background-image: -webkit-linear-gradient(
      90deg,
      transparent 50%,
      var(--dark-bg) 50%
    );
  }

  .daily-forecast {
    flex-direction: column;
  }

  .hourly-forecast {
    flex-direction: column;
  }

  .forecast {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .forecast > h3 {
    width: 4.2rem;
  }

  .forecast > p {
    width: 4.2rem;
  }

  .forecast-container {
    justify-content: center;
  }

  .forecast > img {
    width: 20%;
    margin-left: auto;
  }
}

@media (max-width: 375px) {
  :root {
    font-size: 9px;
  }

  .celsius,
  .farenheit {
    padding: 0.6rem 1.2rem;
  }

  .search-container {
    max-width: 260px;
    min-width: 260px;
  }

  .forecast-button {
    max-width: 60px;
    min-width: 60px;
  }
}

